--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,9 @@ default: &default
 
 development:
   <<: *default
-  database: blog_development
+  database: blog
+  username: postgres
+  password: ""
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -80,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  database: blog_production
-  username: blog
-  password: <%= ENV['BLOG_DATABASE_PASSWORD'] %>
+  database: d81g0bol4580bs
+  username: ktqkwdolfyhmqt
+  password: <%= ENV['BLOG_PASS'] %>
